[package]
name = "blockfs"
version = "0.1.0"
authors = ["Patrick Elsen <pelsen@xfbs.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuse = "0.3.1"
diesel = { version = "1.4.4", features = ["sqlite"] }
diesel_migrations = { version = "1.4.0", features = ["sqlite"] }
clap = "2.33.1"
libc = "0.2.70"
time = "0.1"
